<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/toggle_background_unselected"
    android:orientation="vertical" >

	<RelativeLayout
	android:id="@+id/header_layout"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"	
	android:background="@color/toggle_background_selected">
		<TextView
		android:id="@+id/header"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/header_text"
		android:textColor="@color/black"
		android:textSize="25sp"/>
		<Button 
		android:id="@+id/sendEmail"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/send_email"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"/>
	</RelativeLayout>
	<TextView
	android:id="@+id/border_line"
	android:layout_width="fill_parent"
	android:layout_height="1dp"
	android:background="@color/black"/>
	<ListView 
	android:id="@android:id/list"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"/>
	<TextView
	android:id="@android:id/empty"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:text="@string/empty"
	android:textColor="@color/black"
	android:gravity="center"/>
</LinearLayout>